# assembler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.py  build.sh  generators.txt  inc.txt  metamapping.txt  paradigm.txt  readme.md  src.txt
inc/: bash_terminal.h  bash_utils.h  cli_pack.h  cli_value.h  console.h  glslang_utils.h  stdafx.h  targetver.h  utils.h
inc/cli/: value.h
inc/details/: spirv.hpp
inc/editor/: editor.h
inc/generators/: header_generator.h  meta.h  models.h  shader.h
libraries/: glslang-default-resource-limits.lib  ignore.txt
src/: assembler.cpp  bash_terminal.cpp  cli_pack.cpp  cli_value.cpp  glslang_utils.cpp  stdafx.cpp
src/details/: spirv.cpp
src/generators/: models.cpp  shader.cpp
